1.模拟Ioc 依赖注入 2.模拟线程池OOM